<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_control">

    <fragment
        android:id="@+id/navigation_control"
        android:name="com.spiderxeplorer.controller.ui.control.ControlFragment"
        android:label="@string/title_control"
        tools:layout="@layout/fragment_control" />

    <fragment
        android:id="@+id/navigation_sensors"
        android:name="com.spiderxeplorer.controller.ui.sensors.SensorsFragment"
        android:label="@string/title_sensors"
        tools:layout="@layout/fragment_sensors" />

    <fragment
        android:id="@+id/navigation_camera"
        android:name="com.spiderxeplorer.controller.ui.camera.CameraFragment"
        android:label="@string/title_camera"
        tools:layout="@layout/fragment_camera" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.spiderxeplorer.controller.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>
